# film_proccessing

./: .gitignore  DISTRIBUTION.md  README.md  build.bat  debug_auto.py  dev.bat  electron-main.js  main.py  package-for-distribution.bat  package-lock.json  package.json  preload.js  pyproject.toml  test_auto_features.py  test_flask.py  test_imports.py  test_quick_debug.py  test_simple_algorithm.py
.github/workflows/: deploy-pages.yml
docs/: ALGORITHM.md  ARCHITECTURE.md  CROP_BUGFIX_SPEC.md  LIGHTING_TOOLS_REVIEW.md
examples/: analyze_negative.py  compare_corrections.py
mobile/: README.md  app.js  autocrop.js  batch.js  browse.js  index.html  manifest.webmanifest  pipeline.js  style.css  sw.js  tiff.js  webgl-renderer.js
src/: __init__.py  app.py  film_processing.py  image_processor.py
static/: app.js  autocrop.js  style.css  webgl-renderer.js
templates/: index.html  index_new.html  index_old.html
tests/: mobile_drive.mjs  mobile_electron_main.cjs  test_basic.py  ui_drive.mjs
