[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "film-processing"
version = "1.0.0"
description = "A comprehensive tool for processing and correcting scanned film negatives"
authors = [
    {name = "Luke"},
]
dependencies = [
    "flask>=2.0.0",
    "numpy>=1.21.0", 
    "pillow>=8.0.0",
    "opencv-python>=4.5.0",
    "matplotlib>=3.3.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]

[project.scripts]
film-processing = "src.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
