[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "professional-film-processor"
version = "2.0.0"
description = "Professional film negative processing tool with advanced color science - rivals Photoshop and Negative Lab Pro"
authors = [
    {name = "Luke"},
]
requires-python = ">=3.9"
dependencies = [
    # Web framework
    "flask>=2.0.0",
    
    # Core scientific computing
    "numpy>=1.21.0",
    "scipy>=1.7.0",          # For advanced interpolation and signal processing
    "opencv-python>=4.5.0",  # Computer vision and image processing
    "pillow>=8.3.0",         # Advanced image I/O and processing
    "tifffile>=2021.0.0",    # Proper 16-bit TIFF support
    
    # GPU acceleration
    "cupy-cuda13x>=13.0.0",  # GPU-accelerated NumPy (100x+ speedup)
    
    # Color science and advanced features
    "colour-science>=0.4.0", # Professional color science library
    "imageio>=2.9.0",        # Advanced image I/O with color profile support
    "scikit-image>=0.18.0",  # Advanced image processing algorithms
    
    # Optional for advanced features
    "matplotlib>=3.3.0",     # For debugging and visualization
]
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]
ai = [
    # AI-powered color correction dependencies
    "openai>=1.0.0",         # OpenAI GPT-4V for vision analysis
    "requests>=2.28.0",      # HTTP requests for AI APIs
]

[project.scripts]
film-processor = "src.app:app.run"

[tool.hatch.build.targets.wheel]
packages = ["src"]
